Update HTML to fix dropdowns to all use the <button> tag

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="dropdown">
                     <button id="algorithms" class="dropdown-btn">Algorithms</button>
                     <div class="dropdown-content">
-                        <p>Breadth First Search</p>
-                        <p>A*</p>
+                        <button>Breadth First Search</button>
+                        <button>A*</button>
                     </div>
                 </div>
             </div>
